refactor: Update project name to CrazyChef_Michlan-recipe-bot
- Changed project name in pyproject.toml
- Verified dependencies still install correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "funny-recipe-bot"
+name = "CrazyChef_Michlan-recipe-bot"
 version = "0.1.0"
 dependencies = [
     "aiogram>=3.0.0",
