--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,12 @@ name = "CrazyChef_Michlan-recipe-bot"
 version = "0.1.0"
 dependencies = [
     "aiogram>=3.0.0",
-    "python-dotenv>=1.0.0"
+    "python-dotenv>=1.0.0",
+    "openai>=1.0.0"
 ]
 
 [tool.setuptools]
-py-modules = ["main", "config", "handlers"]
+py-modules = ["main", "config", "handlers", "llm_client"]
 
 [tool.uv]
 dev-dependencies = []
