--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
 py-modules = ["main", "config", "handlers", "llm_client"]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=8.4.2",
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
